# openai-codex-mcp

./: .dockerignore  Dockerfile  README.md  codex_server.py  docker-compose.yml  openai_codex_mcp.json  pyproject.toml
